--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,17 +1,24 @@
 repositories {
+    google()
     mavenCentral()
-    google() // Needed for androidx
+    flatDir {
+        dirs 'libs'
+    }
+    maven { url 'https://maven.brot.dev/' } // Optional unless using RoadRunner extensions
 }
 
 dependencies {
-    implementation 'org.firstinspires.ftc:Inspection:10.1.1'
-    implementation 'org.firstinspires.ftc:Blocks:10.1.1'
     implementation 'org.firstinspires.ftc:RobotCore:10.1.1'
     implementation 'org.firstinspires.ftc:RobotServer:10.1.1'
-    implementation 'org.firstinspires.ftc:OnBotJava:10.1.1'
     implementation 'org.firstinspires.ftc:Hardware:10.1.1'
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
+    implementation 'org.firstinspires.ftc:Inspection:10.1.1'
+    implementation 'org.firstinspires.ftc:Blocks:10.1.1'
+    implementation 'org.firstinspires.ftc:OnBotJava:10.1.1'
+    implementation 'org.firstinspires.ftc:Tfod:8.0.0'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-}
 
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+
+
+}
